--- a/src/advanced/advanced-layout-2.html
+++ b/src/advanced/advanced-layout-2.html
@@ -6,7 +6,35 @@
     <title>Advanced Layout 2</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+      body {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-areas:
+          '.'
+          'header'
+          '.'
+          'main'
+          'footer'
+      }
+
+      header {
+        grid-area: header;
+        transform: rotate(25deg);
+      }
+
+      nav {
+        grid-area: header;
+        transform: rotate(-25deg);
+      }
+
+      main {
+        grid-area: main;
+      }
+
+      footer {
+        grid-area: footer;
+      }
     </style>
   </head>
   <body id="advanced-layout-2">
